--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@stencil/core": "^2.13.0",
+    "@stencil/react-output-target": "^0.3.1",
     "feather-icons": "^4.29.0"
   },
   "devDependencies": {
