--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ptu-elements",
   "version": "0.0.1",
-  "description": "Stencil Component Starter",
+  "description": "Design elements for use with Peterborough Tenants' Union websites and apps.",
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
   "es2015": "dist/esm/index.mjs",
@@ -12,7 +12,7 @@
   "unpkg": "dist/ptu-elements/ptu-elements.esm.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ionic-team/stencil-component-starter.git"
+    "url": "https://github.com/ptenu/web-components"
   },
   "files": [
     "dist/",
@@ -28,7 +28,6 @@
   "dependencies": {
     "@stencil/core": "^2.13.0",
     "@stencil/react-output-target": "^0.3.1",
-    "feather-icons": "^4.29.0"
   },
   "devDependencies": {
     "@stencil/postcss": "^2.1.0",
