--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@stencil/core": "^2.13.0",
-    "@stencil/react-output-target": "^0.3.1",
+    "@stencil/react-output-target": "^0.3.1"
   },
   "devDependencies": {
     "@stencil/postcss": "^2.1.0",
