--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ptu-elements",
   "version": "0.0.1",
   "description": "Design elements for use with Peterborough Tenants' Union websites and apps.",
+  "author": "Alex Hall <alex.hall@peterboroughtenants.org> (https://www.peterboroughtenants.org)",
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
   "es2015": "dist/esm/index.mjs",
