--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ptu-elements",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Design elements for use with Peterborough Tenants' Union websites and apps.",
   "author": "Alex Hall <alex.hall@peterboroughtenants.org> (https://www.peterboroughtenants.org)",
   "main": "dist/index.cjs.js",
@@ -28,13 +28,17 @@
   },
   "dependencies": {
     "@stencil/core": "^2.13.0",
-    "@stencil/react-output-target": "^0.3.1"
+    "@stencil/react-output-target": "^0.3.1",
+    "@types/react-dom": "^18.0.4",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "@stencil/postcss": "^2.1.0",
     "@stencil/sass": "^1.5.2",
     "@types/autoprefixer": "^10.2.0",
     "@types/jest": "^27.0.3",
+    "@types/react": "^18.0.9",
     "autoprefixer": "^10.4.4",
     "cssnano": "^5.1.4",
     "jest": "^27.4.5",
